# vue-compiler

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/compiler-core/: Cargo.toml
crates/compiler-core/src/: ast.rs  codegen.rs  compile.rs  errors.rs  lib.rs  options.rs  parser.rs  runtime_helpers.rs  tokenizer.rs  transform.rs  utils.rs
crates/compiler-core/src/transforms/: cache_static.rs  mod.rs  transform_element.rs  transform_text.rs  transform_v_bind_shorthand.rs  v_bind.rs  v_for.rs  v_if.rs
crates/compiler-core/tests/: codegen.rs  compile.rs  parse.rs  test_utils.rs
crates/compiler-core/tests/snapshots/: compile__compiler_integration_tests__function_mode.snap  compile__compiler_integration_tests__module_mode.snap
crates/compiler-core/tests/transforms/: mod.rs  v_if.rs
crates/compiler-core/tests/transforms/snapshots/: main__transforms__v_if__compiler_v_if__codegen__basic_v_if.snap
crates/compiler-dom/: Cargo.toml
crates/compiler-dom/src/: lib.rs  parser_options.rs
crates/compiler-dom/tests/: parse.rs
crates/compiler-sfc/: Cargo.toml
crates/compiler-sfc/src/: lib.rs  parse.rs
crates/compiler-shared/: Cargo.toml
crates/compiler-shared/src/: lib.rs  patch_flags.rs
